<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">sample-jellybean</string>
    <string name="get_permission">Get Permission</string>
    <string name="enable_location">Enable Location</string>
    <string name="scan_start">Scan Start</string>
    <string name="scan_stop">Scan Stop</string>
    <string name="permission_message">bluetooth low energy feature needs coarse location permission</string>
    <string name="location_message">bluetooth low energy feature needs location feature</string>
    <string name="bond">Bond</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="label_advertising">Advertising sample</string>
    <string name="label_peripheral">Peripheral sample</string>
    <string name="label_central">Central sample</string>
    <string name="label_dis_peripheral" tools:keep="@string/label_dis_peripheral">DIS Peripheral sample</string>
    <string name="label_dis_central" tools:keep="@string/label_dis_central">DIS Central sample</string>
    <string name="label_bas_peripheral" tools:keep="@string/label_bas_peripheral">BAS Peripheral sample</string>
    <string name="label_bas_central" tools:keep="@string/label_bas_central">BAS Central sample</string>
    <string name="label_bls_peripheral" tools:keep="@string/label_bls_peripheral">BLS Peripheral sample</string>
    <string name="label_bls_central" tools:keep="@string/label_bls_central">BLS Central sample</string>
    <string name="label_blp_peripheral">BLP Peripheral sample</string>
    <string name="label_blp_central">BLP Central sample</string>
    <string name="label_lnp_peripheral">LNP Peripheral sample</string>
    <string name="label_lnp_central">LNP Central sample</string>
    <string name="label_fmp_peripheral">FMP Peripheral sample</string>
    <string name="label_fmp_central">FMP Central sample</string>
    <string name="label_pxp_peripheral">PXP Peripheral sample</string>
    <string name="label_pxp_central">PXP Central sample</string>
    <string name="label_hrp_peripheral">HRP Peripheral sample</string>
    <string name="label_hrp_central">HRP Central sample</string>
    <string name="label_htp_peripheral">HTP Peripheral sample</string>
    <string name="label_htp_central">HTP Central sample</string>
    <string name="label_wsp_peripheral">WSP Peripheral sample</string>
    <string name="label_wsp_central">WSP Central sample</string>
    <string name="label_aiop_peripheral">AIOP Peripheral sample</string>
    <string name="label_aiop_central">AIOP Central sample</string>
    <string name="label_anp_peripheral">ANP Peripheral sample</string>
    <string name="label_anp_central">ANP Central sample</string>
    <string name="label_tip_peripheral">TIP Peripheral sample</string>
    <string name="label_tip_central">TIP Central sample</string>
    <string name="label_cpp_peripheral">CPP Peripheral sample</string>
    <string name="label_cpp_central">CPP Central sample</string>
    <string name="label_cscp_peripheral">CSCP Peripheral sample</string>
    <string name="label_cscp_central">CSCP Central sample</string>
    <string name="label_rscp_peripheral">RSCP Peripheral sample</string>
    <string name="label_rscp_central">RSCP Central sample</string>
    <string name="label_pasp_peripheral">PASP Peripheral sample</string>
    <string name="label_pasp_central">PASP Central sample</string>
    <string name="label_ftmp_peripheral">FTMP Peripheral sample</string>
    <string name="label_ftmp_central">FTMP Central sample</string>
    <string name="label_esp_peripheral">ESP Peripheral sample</string>
    <string name="label_esp_central">ESP Central sample</string>
    <string name="label_scpp_peripheral">SCPP Peripheral sample</string>
    <string name="label_scpp_central">SCPP Central sample</string>
    <string name="label_rcp_peripheral">RCP Peripheral sample</string>
    <string name="label_rcp_central">RCP Central sample</string>
    <string name="menu_discover_service">Discover Service</string>
    <string name="menu_discover_service_sync">Discover Service(Synchronous)</string>
    <string name="menu_request_mtu">Request MTU</string>
    <string name="menu_request_mtu_sync">Request MTU(Synchronous)</string>
    <string name="menu_read_phy">Read Phy</string>
    <string name="menu_read_phy_sync">Read Phy(Synchronous)</string>
    <string name="menu_set_preferred_phy">Set Preferred Phy</string>
    <string name="menu_set_preferred_phy_sync">Set Preferred Phy(Synchronous)</string>
    <string name="menu_read_remote_rssi">Read Remote Rssi</string>
    <string name="menu_read_remote_rssi_sync">Read Remote Rssi(Synchronous)</string>
    <string name="menu_read_characteristic">Read Characteristic</string>
    <string name="menu_write_characteristic">Write Characteristic</string>
    <string name="menu_read_descriptor">Read Descriptor</string>
    <string name="menu_write_notification">Write CCCD Notification</string>
    <string name="menu_write_indication">Write CCCD Indication</string>
    <string name="menu_write_notification_stop">Write CCCD Notification stop</string>
    <string name="menu_write_indication_stop">Write CCCD Indication stop</string>
    <string name="menu_read_characteristic_sync">Read Characteristic(Synchronous)</string>
    <string name="menu_write_characteristic_sync">Write Characteristic(Synchronous)</string>
    <string name="menu_write_notification_sync">Write CCCD Notification(Synchronous)</string>
    <string name="menu_write_characteristic_reliable">Write Characteristic(Reliable)</string>
    <string name="menu_write_characteristic_reliable_abort">Write Characteristic(Reliable abort)</string>
    <string name="menu_read_multi_instance_characteristic">Read Multi Instance Characteristic</string>
    <string name="menu_set_notification_on">Set Notification on</string>
    <string name="menu_set_notification_off">Set Notification off</string>
    <string name="menu_set_notification_on_sync">Set Notification on(Synchronous)</string>
    <string name="menu_set_notification_off_sync">Set Notification off(Synchronous)</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_indication">Indication</string>
    <string name="menu_read_manufacturer_name">Read Manufacturer Name</string>
    <string name="menu_read_model_number">Read Model Number</string>
    <string name="menu_read_serial_number">Read Serial Number</string>
    <string name="menu_read_hardware_revision">Read Hardware Revision</string>
    <string name="menu_read_firmware_revision">Read Firmware Revision</string>
    <string name="menu_read_software_revision">Read Software Revision</string>
    <string name="menu_read_system_id">Read System ID</string>
    <string name="menu_read_ieee_11073_20601_regulatory_certification_data_list">Read IEEE 11073 20601 RegulatoryCertificationDataList</string>
    <string name="menu_read_pnp_id">Read Pnp ID</string>
    <string name="menu_read_battery_level">Read Battery Level</string>
    <string name="menu_read_battery_level_1">Read Battery Level(1)</string>
    <string name="menu_read_battery_level_2">Read Battery Level(2)</string>
    <string name="menu_notify_battery_level_start">Notify Battery Level start</string>
    <string name="menu_notify_battery_level_stop">Notify Battery Level stop</string>
    <string name="menu_indicate_blood_pressure_start">Indicate Blood Pressure start</string>
    <string name="menu_indicate_blood_pressure_stop">Indicate Blood Pressure stop</string>
    <string name="menu_notify_intermediate_cuff_pressure_start">Notify Intermediate Cuff Pressure start</string>
    <string name="menu_notify_intermediate_cuff_pressure_stop">Notify Intermediate Cuff Pressure stop</string>
    <string name="menu_read_blood_pressure_feature">Read Blood Pressure Feature</string>
    <string name="menu_load_bonded_device">Load Bonded Device</string>
    <string name="menu_clear_bonded_history">Clear Bonded History</string>
    <string name="menu_read_ln_feature">Read LN Feature</string>
    <string name="menu_notify_location_and_speed_start">Notify Location and Speed start</string>
    <string name="menu_notify_location_and_speed_stop">Notify Location and Speed stop</string>
    <string name="menu_read_position_quality">Read Position Quality</string>
    <string name="menu_write_ln_control_point_1">Write LN Control Point(1)</string>
    <string name="menu_write_ln_control_point_2">Write LN Control Point(2)</string>
    <string name="menu_write_ln_control_point_3">Write LN Control Point(3)</string>
    <string name="menu_write_ln_control_point_4">Write LN Control Point(4)</string>
    <string name="menu_write_ln_control_point_5">Write LN Control Point(5)</string>
    <string name="menu_write_ln_control_point_6">Write LN Control Point(6)</string>
    <string name="menu_write_ln_control_point_7">Write LN Control Point(7)</string>
    <string name="menu_write_alert_level_no">Write Alert Level(No)</string>
    <string name="menu_write_alert_level_mild">Write Alert Level(Mild)</string>
    <string name="menu_write_alert_level_high">Write Alert Level(High)</string>
    <string name="menu_indicate_temperature_measurement_start">Indicate Temperature Measurement start</string>
    <string name="menu_indicate_temperature_measurement_stop">Indicate Temperature Measurement stop</string>
    <string name="menu_read_temperature_type">Read Temperature Type</string>
    <string name="menu_notify_intermediate_temperature_start">Notify Intermediate Temperature start</string>
    <string name="menu_notify_intermediate_temperature_stop">Notify Intermediate Temperature stop</string>
    <string name="menu_read_measurement_interval">Read Measurement Interval</string>
    <string name="menu_write_measurement_interval_0">Write Measurement Interval(0)</string>
    <string name="menu_write_measurement_interval_1">Write Measurement Interval(1)</string>
    <string name="menu_write_measurement_interval_5">Write Measurement Interval(5)</string>
    <string name="menu_write_measurement_interval_10">Write Measurement Interval(10)</string>
    <string name="menu_indicate_measurement_interval_start">Indicate Measurement Interval start</string>
    <string name="menu_indicate_measurement_interval_stop">Indicate Measurement Interval stop</string>
    <string name="menu_read_measurement_interval_valid_range">Read Measurement Interval Valid Range</string>
    <string name="menu_read_alert_status">Get Alert Status</string>
    <string name="menu_read_alert_status_characteristic_configuration">Read Alert Status Client Characteristic Configuration</string>
    <string name="menu_notify_alert_status_start">Notify Alert Status start</string>
    <string name="menu_notify_alert_status_stop">Notify Alert Status stop</string>
    <string name="menu_read_ringer_setting">Get Ringer Setting</string>
    <string name="menu_read_ringer_setting_characteristic_configuration">Read Ringer Setting Client Characteristic Configuration</string>
    <string name="menu_notify_ringer_setting_start">Notify Ringer Setting start</string>
    <string name="menu_notify_ringer_setting_stop">Notify Ringer Setting stop</string>
    <string name="menu_write_ringer_control_point_1">Silent Mode</string>
    <string name="menu_write_ringer_control_point_2">Mute Once</string>
    <string name="menu_write_ringer_control_point_3">Cancel Silent Mode</string>
    <string name="menu_has_scan_refresh">Has Scan Refresh</string>
    <string name="menu_write_scan_interval_window">Write Scan Interval Window</string>
    <string name="menu_read_scan_refresh_characteristic_configuration">Read Scan Refresh CCCD</string>
    <string name="menu_notify_scan_refresh_start">Notify Scan Refresh start</string>
    <string name="menu_notify_scan_refresh_stop">Notify Scan Refresh stop</string>
</resources>