<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/pre_connected">
        <item
            android:id="@+id/load_bonded_device"
            android:title="@string/menu_load_bonded_device" />

        <item
            android:id="@+id/clear_bonded_history"
            android:title="@string/menu_clear_bonded_history" />
    </group>
    <group android:id="@+id/connected">
        <item
            android:id="@+id/read_alert_status"
            android:title="@string/menu_read_alert_status" />
        <item
            android:id="@+id/read_alert_status_characteristic_configuration"
            android:title="@string/menu_read_alert_status_characteristic_configuration" />
        <item
            android:id="@+id/start_notificate_alert_status"
            android:title="@string/menu_notify_alert_status_start" />
        <item
            android:id="@+id/stop_notificate_alert_status"
            android:title="@string/menu_notify_alert_status_stop" />
        <item
            android:id="@+id/read_ringer_setting"
            android:title="@string/menu_read_ringer_setting" />
        <item
            android:id="@+id/read_ringer_setting_characteristic_configuration"
            android:title="@string/menu_read_ringer_setting_characteristic_configuration" />
        <item
            android:id="@+id/start_notificate_ringer_setting"
            android:title="@string/menu_notify_ringer_setting_start" />
        <item
            android:id="@+id/stop_notificate_ringer_setting"
            android:title="@string/menu_notify_ringer_setting_stop" />
        <item
            android:id="@+id/write_ringer_control_point_1"
            android:title="@string/menu_write_ringer_control_point_1" />
        <item
            android:id="@+id/write_ringer_control_point_2"
            android:title="@string/menu_write_ringer_control_point_2" />
        <item
            android:id="@+id/write_ringer_control_point_3"
            android:title="@string/menu_write_ringer_control_point_3" />
    </group>
</menu>